@@ -1,31 +1,0 @@
-.TH GStreamer 1 "June 2001"
-.SH NAME
-gst\-complete - do bash completion for gst\-launch command\-lines
-.SH SYNOPSIS
-.B  complete -C gst\-complete gst\-launch
-.SH DESCRIPTION
-.PP
-\fIgst\-complete\fP is a utility enabling bash to provide
-context sensitive tab completion for \fIgst\-launch\fP command\-lines.
-.
-See the man page for \fIgst\-launch\fP for the syntax of \fIgst\-launch\fP
-command\-lines.
-.
-You must have a version of bash which supports programmable completion.
-Versions of bash which support this provide the \fIcomplete\fP builtin
-command.
-.
-.SH USAGE
-Generate the registry of available plugins by running
-\fIgst\-compprep\fP.
-.
-In your .bash_profile or other appropriate place, run
-.TP 8
-.B  complete -C gst\-complete gst\-launch
-.SH SEE ALSO
-.BR gst\-compprep (1),
-.BR gst\-launch (1),
-.BR gst\-register (1),
-.BR gst\-inspect (1),
-.SH AUTHOR
-The GStreamer team at http://gstreamer.net/
