@@ -1,26 +1,0 @@
-.TH "gst-compprep" "1" "0.2.0" "Richard Boulton" "GStreamer"
-.SH "NAME"
-gst\-compprep \- create the registry for gst\-complete
-.SH "SYNOPSIS"
-gst\-compprep
-.SH "DESCRIPTION"
-.LP 
-\fIgst\-compprep\fR builds a registry of GStreamer elements and their
-features that is used by \fIgst\-complete\fR to perform context-sensitive
-tab completion of \fIgst\-launch\fR command lines.
-.LP 
-By default, the registry is stored in /etc/gstreamer/compreg.xml
-.SH "USAGE"
-Whenever the available gstreamer plugins are modified, the registry should
-be regenerated by running \fIgst\-compprep\fP as root.
-.SH "FILES"
-.TP 8
-/etc/gstreamer/compreg.xml
-Registry generated by \fIgst\-compprep\fP and used by \fIgst\-complete\fP.
-.SH "SEE ALSO"
-.BR gst\-complete (1),
-.BR gst\-launch (1),
-.BR gst\-register (1),
-.BR gst\-inspect (1),
-.SH "AUTHOR"
-The GStreamer team at http://gstreamer.net/
